Export subjects for an agency
